# methpipe

./: .gitignore  .gitmodules  FileIterator.hpp  Makefile  Makefile.am  README.md  README.txt  RNG.cpp  configure.ac  original_makefile.mk  release-history.org  roadmap.org  wand.sublime-project
bsutils/: BSUtils.hpp  FileIterator.hpp  Makefile  README.txt  allelic.cpp  bsrate.cpp  bsrate2.cpp  cgicaller.cpp  coverage.cpp  coverage2.cpp  cpgcaller.cpp  cpgsmoother.cpp  dmr.cpp  dmrfinder.cpp  mergelanes.cpp  methcounts.cpp  methdiff.cpp  methgram_prep.cpp  sortreads.cpp
bsutils/ThreeStateHMM/: HMM.cpp  HMM.hpp  Makefile  StringTool.cpp  StringTool.hpp  dmrhmm.cpp
bsutils/diffseg/: Makefile  TwoStateHMM.cpp  TwoStateHMM.hpp  diffseg.cpp  methseg.cpp
bsutils/dmr-h/: Makefile  TwoStateHMM.cpp  TwoStateHMM.hpp  dmr-fixed.cpp  dmr-h.cpp
bsutils/methseg/: Makefile  TwoStateHMM.cpp  TwoStateHMM.hpp  hmr.cpp  hmr2.cpp  methseg.cpp
bsutils/tools/: bed2html.py  complement.cpp  intersect.cpp  intersection.py  jackpot-del2.py  mean-counter.cpp  methcount-parser.py  methdiff-parser.py  methseg-parser.py  union.cpp
docs/: PNSmaruj_methpipe.md  methpipe-mannual.tex  methpipe-manual.bib  methpipe-manual.tex
docs/figs/: A-rich-base-composition.eps  Methpipe_work_flow.eps  Methpipe_work_flow.tif  T-rich-base-composition.eps
smithlab_cpp/: OptionParser.cpp
src/: Makefile  README.txt  methpipe.cpp  original_makefile.mk
src/adjust/: Makefile  adjust.cpp  bin_for_distance.cpp  bin_for_distance.hpp  combine_pvals.cpp  combine_pvals.hpp  distance_correlation.cpp  distance_correlation.hpp  dmrs.cpp  fdr.cpp  fdr.hpp  locus.cpp  merge.cpp  merge.hpp  proximal_loci.cpp  proximal_loci.hpp  pvallocus.cpp  stoufferliptak.cpp  stoufferliptak.hpp
src/amrfinder/: Makefile  allelicmeth.cpp  amrfinder.cpp  amrtester.cpp  original_makefile.mk
src/analysis/: Makefile  README.txt  allelicmeth.cpp  amr.cpp  amrfinder.cpp  amrtester.cpp  bsrate.cpp  bsrate_sam.cpp  checkoverlap.cpp  clipmates.cpp  dmr.cpp  dmr0.cpp  dmr2.cpp  hmr.cpp  hmr_plant.cpp  hmr_posterior.cpp  hmr_rep.cpp  hypermr.cpp  levels.cpp  mappedstat.cpp  merge-bsrate.cpp  merge-counts.cpp  merge-methcounts.cpp  mergelanes.cpp  methcounts.cpp  methcounts_sam.cpp  methdiff.cpp  methentropy.cpp  methstates.cpp  mlml.cpp  multimethstat.cpp  original_makefile.mk  pairedend_stat.cpp  pmd.cpp  roimethstat.cpp  selectsites.cpp  sortreads.cpp
src/common/: BetaBin.cpp  BetaBin.hpp  Distro.cpp  Distro.hpp  EmissionDistribution.cpp  EmissionDistribution.hpp  Epiread.cpp  Epiread.hpp  EpireadIO.cpp  EpireadIO.hpp  EpireadStats.cpp  EpireadStats.hpp  FastRead.cpp  FastRead.hpp  FileIterator.cpp  FileIterator.hpp  LevelsCounter.cpp  LevelsCounter.hpp  Makefile  MapResult.hpp  MapResultForPE.hpp  MapResultPE.hpp  MethpipeFiles.cpp  MethpipeFiles.hpp  MethpipeSite.cpp  MethpipeSite.hpp  ModelParams.hpp  SeedMaker.cpp  SeedMaker.hpp  Smoothing.cpp  Smoothing.hpp  ThreeStateHMM.cpp  ThreeStateHMM.hpp  TwoStateHMM.cpp  TwoStateHMM.hpp  TwoStateHMM_PMD.cpp  TwoStateHMM_PMD.hpp  bamtools_interface.cpp  bamtools_interface.hpp  bsutils.cpp  (+16 more)
src/common-experimental/: Makefile  ModelParams.cxx  ThreeStateHDHMM.cpp  ThreeStateHDHMM.hpp  TwoStateCTHMM.cpp  TwoStateCTHMM.hpp  nonparametric-test.cpp  nonparametric-test.hpp  original_makefile.mk
src/common-pmd/: Makefile  TwoStateHMM_PMD.cpp  TwoStateHMM_PMD.hpp
src/cytosines/: Makefile  cytosines.cpp
src/experimental/: Makefile  dmr-hdhmm.cpp  original_makefile.mk
src/mapper/: Makefile  rmapbs.cpp
src/mlml/: Makefile  mlml.cpp
src/pipeline/: biorep  build_methylome.py  library  merge-methylomes  run-fastLiftOver2-collapse.sh  run-fastLiftOver2-unique.sh  run-fastLiftOver2.sh  run-liftOver-allC.sh  run_clipmates.py
src/postmapping/: Makefile  README.txt  clipmates.cpp  duplicate-remover.cpp  frag2mr.cpp  mask-overlap.cpp  merge.cpp  reorder.cpp  revcomp.cpp  sort.cpp  unique.cpp
src/premapping/: Makefile  README.txt  quality_plot.R  read-quality-prof.cpp  trim-adapter.cpp  visireads.cpp
src/radmeth/: .gitignore  .gitmodules  Makefile  adjust.cpp  combine_pvals.cpp  combine_pvals.hpp  dmr.cpp  dmrs.cpp  gsl_fitter.cpp  gsl_fitter.hpp  locus.cpp  locus.hpp  loglikratio_test.cpp  make_table.cpp  merge.cpp  methdiff.cpp  original_makefile.mk  proximal_loci.cpp  pvallocus.cpp  pvallocus.hpp  radmeth-adjust.cpp  radmeth-merge.cpp  radmeth.cpp  regression.cpp  regression.hpp  stoufferliptak.hpp  table_row.cpp  table_row.hpp  wand.cpp
src/readqc/: QualityProf  README.txt  count_reads  quality_prof  split_reads
src/rmapbs/: Makefile  rmapbs-pe.cpp  rmapbs.cpp
src/rseg/: BAMFile.cpp  BAMFile.hpp  Distro.cpp  Distro.hpp  EvaluateBoundaries.cpp  EvaluateBoundaries.hpp  LoadReadsByRegion.cpp  LoadReadsByRegion.hpp  Makefile  ModelParams.cpp  ModelParams.hpp  ReadCounts.cpp  ReadCounts.hpp  SelectBinSize.cpp  SelectBinSize.hpp  Smoothing.cpp  Smoothing.hpp  SortGenomicRegion.cpp  SortGenomicRegion.hpp  SplitDistro.cpp  SplitDistro.hpp  ThreeStateScaleSplitHMM.cpp  ThreeStateScaleSplitHMM.hpp  ThreeStateScaleSplitResolveMixture.cpp  ThreeStateScaleSplitResolveMixture.hpp  TwoStateScaleHMM.cpp  TwoStateScaleHMM.hpp  TwoStateScaleResolveMixture.cpp  TwoStateScaleResolveMixture.hpp  TwoStateScaleSplitHMM.cpp  TwoStateScaleSplitHMM.hpp  TwoStateScaleSplitResolveMixture.cpp  TwoStateScaleSplitResolveMixture.hpp  deadzones.cpp  numerical_utils.cpp  numerical_utils.hpp  rseg-diff.cpp  rseg.cpp  rseg_utils.cpp  rseg_utils.hpp
src/smithlab_cpp/: .gitignore  SAM.cpp  smithlab_utils.cpp  smithlab_utils.hpp
src/utils/: Makefile  bigWig_to_methcounts.py  clean-hairpins.cpp  cpg.hpp  duplicate-remover.cpp  duplicate-remover_sam.cpp  fast-liftover.cpp  fastLiftOver.cpp  fastLiftOver2.cpp  format_mapped_reads.cpp  format_reads.cpp  guessprotocol.cpp  lc_approx.cpp  lift-filter.cpp  make_table.cpp  merge-bsrate.cpp  merge-methcounts.cpp  original_makefile.mk  selectsites  selectsites.cpp  split_table.cpp  symmetric-cpgs.cpp  table_splitter.cpp  to-mr.cpp  to-mr2.cpp
src/wand/: Makefile  design.cpp  design.hpp  (+1 more)
(+51 files in other folders)
